header/intro html content

--- a/index.html
+++ b/index.html
@@ -12,6 +12,34 @@
 
 <body>
 
+	<header>
+		<section id="banner">
+			<!-- cover image goes here -->
+		</section>
+
+		<nav>
+			<ul>
+				<li>Menu</li>
+				<li>Catering</li>
+				<li>About Us</li>
+				<li>Contact</li>
+			</ul>
+		</nav>
+	</header> <!-- end header -->
+
+	<section id="main-content">
+
+		<div class="intro"> <!-- intro to dirty dogs -->
+			<div class="logo">
+			</div>
+
+			<h1>Dirty Dogs serves all-beef, vegan and vegatagian hot dogs.</h1>
+
+			<a class="button" href="#">More Dogs ‘n Make Em Hot</a>
+		</div>
+
+	</section> <!-- end main-content -->
+
 </body>
 
 </html>
