--- a/index.html
+++ b/index.html
@@ -36,9 +36,34 @@
 			<h1>Dirty Dogs serves all-beef, vegan and vegatagian hot dogs.</h1>
 
 			<a class="button" href="#">More Dogs ‘n Make Em Hot</a>
-		</div>
+		</div><!-- end intro -->
+
+		<div class="dog-section">
+			<div class="row">
+				<h2>Gormet All Beef Hotdogs</h2>
+				<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
+			</div>
+
+			<div class="row">
+				<h2>Vegan Hotdogs</h2>
+				<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
+			</div>
+
+			<div class="row">
+				<h2>Vegetarian Hotdogs</h2>
+				<p><p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
+			</div>
+		</div> <!-- end dog-sections -->
 
 	</section> <!-- end main-content -->
+
+	<footer>
+		<div class="wrap">
+			<div class="copyright">&#174; 2016 Dirty Dogs all rights reserved</div>
+
+			<div class="footer-contact">274 Marconi Blvd. Columbus, Ohio 43215 | 614.538.0095 | Contact Us</div>
+		</div> <!-- end footer wrap -->
+	</footer> <!-- end footer -->
 
 </body>
 
