defining variables / setting up fonts

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<!-- Search Engine -->
 	<meta name="description" content="Dirty Dogs serves all-beef, vegan and vegatagian hot dogs.">
 	<link rel="stylesheet" type="text/css" href="_/styles/main.css" media="screen">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 </head>
 
 <body>
