--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<!-- Search Engine -->
 	<meta name="description" content="Dirty Dogs serves all-beef, vegan and vegatagian hot dogs.">
 	<link rel="stylesheet" type="text/css" href="styles/main.css" media="screen">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
 </head>
 
 <body>
@@ -20,10 +20,10 @@
 
 		<nav>
 			<ul>
-				<li>Menu</li>
-				<li>Catering</li>
-				<li>About Us</li>
-				<li>Contact</li>
+				<li><a href="#">Menu</a></li>
+				<li><a href="#">Catering</</li>
+				<li><a href="#">About Us</a></li>
+				<li><a href="#">Contact</a></li>
 			</ul>
 		</nav>
 	</header> <!-- end header -->
