working on the intro / proofreading

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Hot Dog!</title>
 	<meta name="viewport" content="width=device-width">
 	<!-- Search Engine -->
-	<meta name="description" content="Dirty Dogs serves all-beef, vegan and vegatagian hot dogs.">
+	<meta name="description" content="Dirty Dogs serves all-beef, vegan and vegetarian hot dogs.">
 	<link rel="stylesheet" type="text/css" href="styles/main.css" media="screen">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
 </head>
@@ -32,9 +32,10 @@
 
 		<div class="intro"> <!-- intro to dirty dogs -->
 			<div class="logo">
+				<img src="img/hotdog.png" alt="hot dog icon">
 			</div>
 
-			<h1>Dirty Dogs serves all-beef, vegan and vegatagian hot dogs.</h1>
+			<h1>Dirty Dogs serves all-beef, vegan and vegetarian hot dogs.</h1>
 
 			<a class="button" href="#">More Dogs ‘n Make Em Hot</a>
 		</div><!-- end intro -->
