intro style complete

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		</section>
 
 		<nav>
-			<ul>
+			<ul clas="wrap">
 				<li><a href="#">Menu</a></li>
 				<li><a href="#">Catering</</li>
 				<li><a href="#">About Us</a></li>
@@ -29,16 +29,19 @@
 	</header> <!-- end header -->
 
 	<section id="main-content">
+		<div class="wrap">
 
-		<div class="intro"> <!-- intro to dirty dogs -->
-			<div class="logo">
-				<img src="img/hotdog.png" alt="hot dog icon">
-			</div>
+			<div class="intro"> <!-- intro to dirty dogs -->
+				<div class="logo">
+					<img src="img/hotdog.png" alt="hot dog icon">
+				</div>
 
-			<h1>Dirty Dogs serves all-beef, vegan and vegetarian hot dogs.</h1>
+				<h1>Dirty Dogs serves all-beef, vegan and vegetarian hot dogs.</h1>
 
-			<a class="button" href="#">More Dogs ‘n Make Em Hot</a>
-		</div><!-- end intro -->
+				<a class="button" href="#">More Dogs ‘n Make Em Hot</a>
+			</div><!-- end intro -->
+
+		</div> <!-- end wrap -->
 
 		<div class="dog-section">
 			<div class="row">
