styles looking good for smaller screens

--- a/index.html
+++ b/index.html
@@ -45,18 +45,38 @@
 
 		<div class="dog-section">
 			<div class="row">
-				<h2>Gormet All Beef Hotdogs</h2>
-				<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
+
+				<div class="wrap">
+					<h2>Gourmet All Beef Hotdogs</h2>
+					<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
+				</div>
+
+				<div class="pic">
+					<img src="img/pepper-dog.jpg" alt="gourmet hot dog with peppers">
+				</div>
+			</div>
+
+			<div class="row vegan">
+				<div class="pic">
+					<img src="img/vegan-dog.jpg" alt="vegan hot dog">
+				</div>
+
+				<div class="wrap">
+					<h2>Vegan Hotdogs</h2>
+					<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
+				</div>
 			</div>
 
 			<div class="row">
-				<h2>Vegan Hotdogs</h2>
-				<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
-			</div>
 
-			<div class="row">
-				<h2>Vegetarian Hotdogs</h2>
-				<p><p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
+				<div class="wrap">
+					<h2>Vegetarian Hotdogs</h2>
+					<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
+				</div>
+
+				<div class="pic">
+					<img src="img/veggie-dog.jpg" alt="vegetarian hot dog">
+				</div>
 			</div>
 		</div> <!-- end dog-sections -->
 
