text hashtag in banner

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<header>
 		<section id="banner">
 			<!-- cover image goes here -->
+			<p class="hashtag"><i class="fa fa-instagram"></i> #hotdogs</p>
 		</section>
 
 		<nav>
@@ -87,6 +88,8 @@
 
 		<div class="footer-contact">274 Marconi Blvd. Columbus, Ohio 43215 | 614.538.0095 | Contact Us</div>
 	</footer> <!-- end footer -->
+
+	<script src="https://use.fontawesome.com/e24a2790dc.js"></script>
 
 </body>
 
