--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 	</footer> <!-- end footer -->
 
 	<script src="https://use.fontawesome.com/e24a2790dc.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
 
 </body>
 
